[fix] join.css(wrap 기능삭제)
- wrap css 삭제

--- a/nardrak_spring_mvc/src/main/webapp/resources/css/customer/join/join.css
+++ b/nardrak_spring_mvc/src/main/webapp/resources/css/customer/join/join.css
@@ -15,16 +15,6 @@ body {
     color: #333;
 }
 
-.wrap {
-   width: 100%;
-   margin: 0 auto;
-    max-width: 980px;
-    background-color: #fff;
-    padding: 40px;
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-}
-
 #container {
     background-color: #fff;
     border-radius: 8px;
